<resources>
    <string name="app_name">BaseProduct</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this BaseProduct, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="no_internet_connection">No Internet Connection!</string>

    <string name="title_intro_01">Title</string>
    <string name="title_intro_02">Title</string>
    <string name="title_intro_03">Title</string>
    <string name="content_intro_01">Content</string>
    <string name="content_intro_02">Content</string>
    <string name="content_intro_03">Content</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="version">Version: </string>

</resources>