<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/view_top"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top">

        <LinearLayout
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/english"
                android:textColor="@color/color_main"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_rate_us"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rate_us" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>